--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,4 @@
-<h1>Vice Versa</h1>
+<h1>Original Text</h1>
 <form action="{% url 'reverse' %}">
 	<textarea cols="50" rows="10" name="usertext"></textarea>
 	<br><br>
